// Copyright 2023 Intrinsic Innovation LLC
// Intrinsic Proprietary and Confidential
// Provided subject to written agreement between the parties.

syntax = "proto3";

package xfa.icon.actions.proto;

import "intrinsic/icon/proto/cart_space.proto";
import "intrinsic/icon/proto/ik_options.proto";
import "intrinsic/kinematics/types/joint_limits.proto";

// Fixed parameters for a cartesian position action. These are provided once by
// the user when the action is created, and remain the same for the lifetime of
// the action.
message CartesianPositionFixedParams {
  // The desired pose of the tool_frame with respect to the tracking_frame.
  intrinsic_proto.icon.Transform goal_pose = 1;

  // The desired velocity (X,Y,Z) and angular velocity (RX,RY,RZ) of the
  // tool_frame with respect to the tracking_frame.
  intrinsic_proto.icon.Twist goal_twist = 2;

  // The joint limits to apply to this motion. Optional.
  // The limits need to be more conservative than the Application limits
  // configured on the ICON server.
  intrinsic_proto.JointLimits joint_limits = 3;

  // Cartesian limits to apply to this motion. Optional.
  intrinsic_proto.icon.CartesianLimits cartesian_limits = 4;

  // IK options describing nullspace cost terms for redundancy resolution.
  // Optional.
  intrinsic_proto.icon.IKOptions ik_options = 5;
}
